[FIX] install: Prevent scrollbar flicker while filling in the initial login form on the installer in some conditions (maybe only on macOS?)

--- a/themes/css/tiki-install.css
+++ b/themes/css/tiki-install.css
@@ -4,7 +4,7 @@
     color: #777;
 }
 .header-main {
-    height: 100vh;
+    height: 100%;
     background-size: cover;
     background: #48497A;
     clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
